--- a/BirdComics/pom.xml
+++ b/BirdComics/pom.xml
@@ -33,8 +33,52 @@
         <version>4.0.1</version>
         <scope>provided</scope>
     </dependency>
+    
+    <dependency>
+		<groupId>com.google.code.gson</groupId>
+    	<artifactId>gson</artifactId>
+    	<version>2.8.6</version>
+	</dependency>
         
-        
+	<dependency>
+    	<groupId>jakarta.servlet.jsp.jstl</groupId>
+    	<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+    	<version>1.2.7</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.12</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>jstl</artifactId>
+    	<version>1.2</version>
+	</dependency>
+
+    <dependency>
+			<groupId>com.paypal.sdk</groupId>
+			<artifactId>rest-api-sdk</artifactId>
+			<version>1.14.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.7</version>
+		</dependency>
         
   </dependencies>
 
