aggiunto filtro carrello vuoto

--- a/BirdComics/src/main/webapp/WEB-INF/web.xml
+++ b/BirdComics/src/main/webapp/WEB-INF/web.xml
@@ -7,5 +7,19 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+	<filter>
+		<filter-name>EmptyCartRedirectFilter</filter-name>
+		<filter-class>com.birdcomics.Utils.EmptyCartRedirectFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>EmptyCartRedirectFilter</filter-name>
+		<url-pattern>/authorize_payment</url-pattern>
+		<url-pattern>/review_payment</url-pattern>
+		<url-pattern>/riepilogoOrdine.jsp</url-pattern>
+		<url-pattern>/confermaIndirizzo.jsp</url-pattern>
+	</filter-mapping>
+
 
 </web-app>
+
